Reestruturando restapi tests; Sanitizacao dos campos textuais de projeto e preprojeto
