# salic-api/resources/projeto/Projeto_detail.py
@@ -3,6 +3,9 @@ from flask import Response
 from ..ResourceBase import *
 from models import ProjetoModelObject
 from ..serialization import listify_queryset
+from ..format_utils import truncate, remove_blanks
+from sanitization import sanitize
+
 
 
 
@@ -29,7 +32,7 @@ class ProjetoDetail(ResourceBase):
 
         try:
             Log.debug('Starting database call')
-            result, n_records = ProjetoModelObject().all(limit=1, offset=0, PRONAC = PRONAC, extra_fields = extra_fields)
+            result, n_records = ProjetoModelObject().all(limit=1, offset=0, PRONAC = PRONAC, extra_fields = True)
             Log.debug('Database call was successful')
         except Exception as e:
             Log.error( str(e))
@@ -45,6 +48,24 @@ class ProjetoDetail(ResourceBase):
                         }
              return self.render(result, status_code = 404)
 
-        data = listify_queryset(result)[0]
+        projeto = listify_queryset(result)[0]
 
-        return self.render(data)
+        "Getting rid of blanks"
+        projeto["cgccpf"]  = remove_blanks(str(projeto["cgccpf"]))
+
+        "Sanitizing text values"
+        projeto['acessibilidade'] = sanitize(projeto['acessibilidade'])
+        projeto['objetivos'] = sanitize(projeto['objetivos'])
+        projeto['justificativa'] = sanitize(projeto['justificativa'])
+        projeto['etapa'] = sanitize(projeto['etapa'])
+        projeto['ficha_tecnica'] = sanitize(projeto['ficha_tecnica'])
+        projeto['impacto_ambiental'] = sanitize(projeto['impacto_ambiental'])
+        projeto['especificacao_tecnica'] = sanitize(projeto['especificacao_tecnica'])
+        projeto['estrategia_execucao'] = sanitize(projeto['estrategia_execucao'])
+        projeto['providencia'] = sanitize(projeto['providencia'])
+        projeto['democratizacao'] =  sanitize(projeto["democratizacao"])
+
+        projeto['sinopse'] = truncate(projeto["sinopse"])
+        projeto['resumo'] = truncate(projeto["resumo"])
+
+        return self.render(projeto)
